Add services for matching ID duplication check, retrieval by URL key, and ID/password verification; update service for modified TeamResultDto